src/test/compile-fail/name-clash-nullary.rs
// error-pattern:declaration of `None` shadows
import option::*;

fn main() {
  let None: int = 42;
  log(debug, None);
}
